@@ -1,4 +1,9 @@
 
+2023-02-20  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>
+
+	* pplex.l: allow REPLACE between Gcos `CONTROL DIVISION` and
+	  the`IDENTIFICATION DIVISION`
+
 2023-02-10  Simon Sobisch <simonsobisch@gnu.org>
 
 	* cobc.c (clean_up_intermediates): fix missing move of temporary files
